--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ crashlytics-build.properties
 VEFramework/Temp/
 VEFramework/Library/
 VEFramework/obj/
+VEFramework/Assets/StreamingAssets/
+VEFramework/Assets/StreamingAssets.meta
