--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ VEFramework/Library/
 VEFramework/obj/
 VEFramework/Assets/StreamingAssets/
 VEFramework/Assets/StreamingAssets.meta
+VEFramework/Assets/Resource/
+VEFramework/Assets/DevelopTest/A1/ty_pic_06.png.meta
+VEFramework/Assets/DevelopTest/
+VEFramework/Assets/DevelopTest.meta
+VEFramework/Assets/Resource.meta
