--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,5 @@ VEFramework/Assets/DevelopTest/A1/ty_pic_06.png.meta
 VEFramework/Assets/DevelopTest/
 VEFramework/Assets/DevelopTest.meta
 VEFramework/Assets/Resource.meta
+VEFramework/Assets/Resources/
+VEFramework/Assets/Resources.meta
